[gd_scene load_steps=21 format=3 uid="uid://dcikxiplqdp1h"]

[ext_resource type="Script" path="res://Scripts/lijiaqi.gd" id="1_0rxs5"]
[ext_resource type="Texture2D" uid="uid://bqnd57afg0xr6" path="res://Assets/Knight_player/Idle_KG_1.png" id="1_btoup"]
[ext_resource type="Texture2D" uid="uid://cd5uwb0y8rx4j" path="res://Assets/lijiaqi_Head.png" id="2_1ov7r"]
[ext_resource type="Texture2D" uid="uid://bqnhtfugrpnw" path="res://Assets/Knight_player/Walking_KG_2.png" id="3_3wmy0"]

[sub_resource type="AtlasTexture" id="AtlasTexture_34w1n"]
atlas = ExtResource("1_btoup")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_78300"]
atlas = ExtResource("1_btoup")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj1l2"]
atlas = ExtResource("1_btoup")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_23ls2"]
atlas = ExtResource("1_btoup")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdbox"]
atlas = ExtResource("3_3wmy0")
region = Rect2(0, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_83i5r"]
atlas = ExtResource("3_3wmy0")
region = Rect2(100, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fftgu"]
atlas = ExtResource("3_3wmy0")
region = Rect2(200, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhqaf"]
atlas = ExtResource("3_3wmy0")
region = Rect2(300, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnxr8"]
atlas = ExtResource("3_3wmy0")
region = Rect2(400, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmq48"]
atlas = ExtResource("3_3wmy0")
region = Rect2(500, 0, 100, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_huk0u"]
atlas = ExtResource("3_3wmy0")
region = Rect2(600, 0, 100, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_qovi0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_34w1n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78300")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj1l2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23ls2")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdbox")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_83i5r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fftgu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhqaf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnxr8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmq48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huk0u")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dgkmh"]
radius = 15.0
height = 66.0

[sub_resource type="Animation" id="Animation_1ovu1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/LJQ_Head:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/LJQ_Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_csop3"]
resource_name = "shake"
length = 0.3
loop_mode = 1
step = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D/LJQ_Head:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(17, -52), Vector2(17, -40), Vector2(17, -52)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D/LJQ_Head:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [0.155334, -0.0872665, 0.15708]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v8y8m"]
_data = {
"RESET": SubResource("Animation_1ovu1"),
"shake": SubResource("Animation_csop3")
}

[node name="Lijiaqi" type="CharacterBody2D" groups=["enemy"]]
position = Vector2(583, 313)
scale = Vector2(3, 3)
script = ExtResource("1_0rxs5")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qovi0")
animation = &"run"
autoplay = "run"
frame_progress = 0.332385

[node name="LJQ_Head" type="Sprite2D" parent="AnimatedSprite2D"]
position = Vector2(-3, -2.5)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_1ov7r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_dgkmh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "shake"
libraries = {
"": SubResource("AnimationLibrary_v8y8m")
}

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -21.0
offset_top = -57.0
offset_right = 19.0
offset_bottom = -34.0
text = "V:"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="VelocityTimer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[connection signal="timeout" from="VelocityTimer" to="." method="_on_velocity_timer_timeout"]
